{
  "version": 4,
  "terraform_version": "1.3.9",
  "serial": 51,
  "lineage": "0c039efe-2bbc-ea6f-cd15-345d290a38d2",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-02-25T02:31:12.519-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/lively-shelter-294615/global/firewalls/allow-http-terraform",
            "log_config": [],
            "name": "allow-http-terraform",
            "network": "https://www.googleapis.com/compute/v1/projects/lively-shelter-294615/global/networks/default",
            "priority": 1000,
            "project": "lively-shelter-294615",
            "self_link": "https://www.googleapis.com/compute/v1/projects/lively-shelter-294615/global/firewalls/allow-http-terraform",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "allow-http"
            ],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-02-25T02:31:12.523-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/lively-shelter-294615/global/firewalls/allow-https-terraform",
            "log_config": [],
            "name": "allow-https-terraform",
            "network": "https://www.googleapis.com/compute/v1/projects/lively-shelter-294615/global/networks/default",
            "priority": 1000,
            "project": "lively-shelter-294615",
            "self_link": "https://www.googleapis.com/compute/v1/projects/lively-shelter-294615/global/firewalls/allow-https-terraform",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "allow-https"
            ],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20230214",
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/lively-shelter-294615/zones/europe-west8-a/disks/test-terraform-1"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "description": "Create Virtual Machines with firewall rules",
            "enable_display": false,
            "id": "projects/lively-shelter-294615/zones/europe-west8-a/instances/test-terraform-1",
            "instance_id": "881072008049483166",
            "label_fingerprint": "M0bj0QHu8BQ=",
            "labels": {
              "machine_type": "e2-standard-4",
              "name": "test-terraform-1"
            },
            "machine_type": "e2-standard-4",
            "metadata": {
              "foo": "bar",
              "size": "20"
            },
            "metadata_fingerprint": "-Ie5EqjqZfE=",
            "metadata_startup_script": "echo hi \u003e test.txt",
            "name": "test-terraform-1",
            "network_interface": [
              {
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/lively-shelter-294615/global/networks/default",
                "network_ip": "10.198.0.23",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/lively-shelter-294615/regions/europe-west8/subnetworks/default",
                "subnetwork_project": "lively-shelter-294615"
              }
            ],
            "project": "lively-shelter-294615",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/lively-shelter-294615/zones/europe-west8-a/instances/test-terraform-1",
            "service_account": [
              {
                "email": "154896635632-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/compute.readonly",
                  "https://www.googleapis.com/auth/devstorage.read_only",
                  "https://www.googleapis.com/auth/userinfo.email"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "allow-http",
              "allow-https"
            ],
            "tags_fingerprint": "0lKznsNvMu8=",
            "zone": "europe-west8-a"
          }
        },
        {
          "index_key": 1,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20230214",
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/lively-shelter-294615/zones/europe-west8-a/disks/test-terraform-2"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "description": "Create Virtual Machines with firewall rules",
            "enable_display": false,
            "id": "projects/lively-shelter-294615/zones/europe-west8-a/instances/test-terraform-2",
            "instance_id": "4464222099066871198",
            "label_fingerprint": "j41yXXNxQdc=",
            "labels": {
              "machine_type": "e2-standard-4",
              "name": "test-terraform-2"
            },
            "machine_type": "e2-standard-4",
            "metadata": {
              "foo": "bar",
              "size": "20"
            },
            "metadata_fingerprint": "-Ie5EqjqZfE=",
            "metadata_startup_script": "echo hi \u003e test.txt",
            "name": "test-terraform-2",
            "network_interface": [
              {
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/lively-shelter-294615/global/networks/default",
                "network_ip": "10.198.0.25",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/lively-shelter-294615/regions/europe-west8/subnetworks/default",
                "subnetwork_project": "lively-shelter-294615"
              }
            ],
            "project": "lively-shelter-294615",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/lively-shelter-294615/zones/europe-west8-a/instances/test-terraform-2",
            "service_account": [
              {
                "email": "154896635632-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/compute.readonly",
                  "https://www.googleapis.com/auth/devstorage.read_only",
                  "https://www.googleapis.com/auth/userinfo.email"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "allow-http",
              "allow-https"
            ],
            "tags_fingerprint": "0lKznsNvMu8=",
            "zone": "europe-west8-a"
          }
        },
        {
          "index_key": 2,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20230214",
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/lively-shelter-294615/zones/europe-west8-a/disks/test-terraform-3"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "description": "Create Virtual Machines with firewall rules",
            "enable_display": false,
            "id": "projects/lively-shelter-294615/zones/europe-west8-a/instances/test-terraform-3",
            "instance_id": "146640494583373214",
            "label_fingerprint": "hOUXiwZaGtU=",
            "labels": {
              "machine_type": "e2-standard-4",
              "name": "test-terraform-3"
            },
            "machine_type": "e2-standard-4",
            "metadata": {
              "foo": "bar",
              "size": "20"
            },
            "metadata_fingerprint": "-Ie5EqjqZfE=",
            "metadata_startup_script": "echo hi \u003e test.txt",
            "name": "test-terraform-3",
            "network_interface": [
              {
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/lively-shelter-294615/global/networks/default",
                "network_ip": "10.198.0.24",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/lively-shelter-294615/regions/europe-west8/subnetworks/default",
                "subnetwork_project": "lively-shelter-294615"
              }
            ],
            "project": "lively-shelter-294615",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/lively-shelter-294615/zones/europe-west8-a/instances/test-terraform-3",
            "service_account": [
              {
                "email": "154896635632-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/compute.readonly",
                  "https://www.googleapis.com/auth/devstorage.read_only",
                  "https://www.googleapis.com/auth/userinfo.email"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "allow-http",
              "allow-https"
            ],
            "tags_fingerprint": "0lKznsNvMu8=",
            "zone": "europe-west8-a"
          }
        }
      ]
    }
  ]
}